deployment/dev/regnerdetnu/templates/deployment.api.yaml
---
# Source: regnerdetnu/templates/deployment.api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-regnerdetnu-api-deployment
  namespace: regnerdetnudev
  labels:
    environment: dev
    version: 1.0.19.feature-testing-stuff
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-regnerdetnu-api-app
      environment: dev
  template:
    metadata:
      labels:
        app: dev-regnerdetnu-api-app
        version: 1.0.19.feature-testing-stuff
        environment: dev
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      serviceAccountName: regnerdetnu-api-sa
      imagePullSecrets:
      - name: acr-pull
      containers:
      - name: regnerdetnu-api-pod
        image: tgclzdevacr.azurecr.io/tgc-regnerdetnu-api:1.0.19.feature-testing-stuff
        ports:
        - containerPort: 8080
