deployment/dev/regnerdetnu/templates/deployment.web.yaml
---
# Source: regnerdetnu/templates/deployment.web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-regnerdetnu-web-deployment
  namespace: regnerdetnudev
  labels:
    environment: dev
    version: 1.0.14
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-regnerdetnu-web-app
      version: 1.0.14
  template:
    metadata:
      labels:
        app: dev-regnerdetnu-web-app
        version: 1.0.14
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      serviceAccountName: regnerdetnu-web-sa
      imagePullSecrets:
      - name: acr-pull
      containers:
      - name: regnerdetnu-web-pod
        image: tgclzdevacr.azurecr.io/tgc-regnerdetnu-app:1.0.14
        ports:
        - containerPort: 80
