deployment/dev/regnerdetnu/templates/service.api.yaml
---
# Source: regnerdetnu/templates/service.api.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-regnerdetnu-api-svc
  namespace: regnerdetnudev
  labels:
    environment: dev
    version: 1.0.12
spec:
  selector:
    app: dev-regnerdetnu-api-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
