deployment/dev/regnerdetnu/templates/service.web.yaml
---
# Source: regnerdetnu/templates/service.web.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-regnerdetnu-web-svc
  namespace: regnerdetnudev
  labels:
    environment: dev
    version: 1.0.15
spec:
  selector:
    app: dev-regnerdetnu-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
