deployment/dev/regnerdetnu/templates/httproute.api.yaml
---
# Source: regnerdetnu/templates/httproute.api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dev-regnerdetnu-api-httproute
  namespace: regnerdetnudev
  labels:
    environment: dev
    version: 1.0.15
spec:
  parentRefs:
    - name: gateway
      namespace: gatewayapi
      sectionName: api-dev-regnerdet-nu-https
  hostnames:
    - api.dev.regnerdet.nu
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: dev-regnerdetnu-api-svc
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
